--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.5)
 project(comp354)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(MainDriver.cpp Cards.cpp GameEngine.cpp MainDriver.cpp)
+Include(FetchContent)
+
+FetchContent_Declare(
+        Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG        v3.0.0-preview3
+)
+
+FetchContent_MakeAvailable(Catch2)
+add_executable(tests Cards.cpp GameEngine.cpp tests/Test_Cards.cpp tests/Test_GameEngine.cpp)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
