--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Build project
         uses: nicledomaS/cmake_build_action@v1.4
       - name: Run tests
-        run: tests
+        run: ./tests
