--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,8 @@ jobs:
           name: Installing SUDO
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
       - run:
-          name: Installing GCC
-          command: 'apt-get update && apt-get install -y gcc g++'
-      - run:
-          name: Install CMAKE
-          command: 'apt-get update && sudo apt-get install -y cmake'
+          name: Installing GCC G++ CMAKE GIT
+          command: 'apt-get install -y gcc g++ git cmake'
       - run:
           name: Creating Build Files
           command: 'cmake -H. -Bbuild'
@@ -24,4 +21,4 @@ jobs:
           command: 'cmake --build build'
       - run:
           name: Point Unit Testing
-          command: './bin/tests' 
+          command: './bin/tests'  
