--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,14 @@ jobs:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
-          name: Install CMAKE
-          command: 'apt-get update && sudo apt-get install -y cmake'
+          name: Install CMAKE 3.5
+          command: |
+            wget https://cmake.org/files/v3.5/cmake-3.5.2.tar.gz --no-check-certificate
+            tar -zxvf cmake-3.5.2.tar.gz 
+            cd cmake-3.5.2
+            ./bootstrap --prefix=/usr
+            make
+            make install
       - run:
           name: Install GIT
           command: 'apt-get update && sudo apt-get install -y git'
@@ -26,4 +32,4 @@ jobs:
           command: 'cmake --build build'
       - run:
           name: Point Unit Testing
-          command: './bin/tests'
+          command: './bin/tests' 
