--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
           name: Install WGET
-          command: 'apt-get update && apt-get install wget'
+          command: 'apt-get update && apt-get install -y wget'
       - run:
           name: Install CMAKE 3.5
           command: |
