--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Install WGET
           command: 'apt-get update && apt-get install -y wget'
       - run:
+          name: Install BUILD-ESSENTIALS
+          command: 'apt-get update && apt-get install -y build-essential'
+      - run:
           name: Install CMAKE 3.5
           command: |
             wget https://cmake.org/files/v3.5/cmake-3.5.2.tar.gz --no-check-certificate
