--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ version: 2
 jobs:
   build:
     docker:
-      - image: "debian:stretch"
+      - image: "debian:bullseye"
+    resources_class: small
     steps:
       - checkout
       - run:
@@ -13,23 +14,8 @@ jobs:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
-          name: Install WGET
-          command: 'apt-get update && apt-get install -y wget'
-      - run:
-          name: Install BUILD-ESSENTIALS
-          command: 'apt-get update && apt-get install -y build-essential'
-      - run:
-          name: Install CMAKE 3.5
-          command: |
-            wget https://cmake.org/files/v3.5/cmake-3.5.2.tar.gz --no-check-certificate
-            tar -zxvf cmake-3.5.2.tar.gz 
-            cd cmake-3.5.2
-            ./bootstrap --prefix=/usr
-            make
-            make install
-      - run:
-          name: Install GIT
-          command: 'apt-get update && sudo apt-get install -y git'
+          name: Install CMAKE
+          command: 'apt-get update && apt-get install -y cmake'
       - run:
           name: Creating Build Files
           command: 'cmake -H. -Bbuild'
