--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(comp354)
+set(CMAKE_CXX_STANDARD 20)
 
 find_package(Catch2 3 REQUIRED)
 add_executable(tests ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Cards.cpp ${CMAKE_SOURCE_DIR}/tests/Test_GameEngine.cpp)
