--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 workflows:
   default:
     jobs:
-      - build-and-test:
+      - build-and-test
 jobs:
   build-and-test:
     docker:
