--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
               only: 
                 - dev-nick
                 - master
+                - devAdrienne
 jobs:
   build-and-test:
     docker:
@@ -23,10 +24,10 @@ jobs:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
-          name: Install CMAKE
+          name: Installing CMAKE
           command: 'apt-get update && apt-get install -y cmake'
       - run:
-          name: Install GIT
+          name: Installing GIT
           command: 'apt-get update && sudo apt-get install -y git'
       - run:
           name: Creating Build Files
