--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
               only: 
                 - dev-nick
                 - master
+                - devAdrienne
 jobs:
   build-and-test:
     docker:
