--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(tests ${CMAKE_SOURCE_DIR}/src/Orders.cpp ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Cards.cpp ${CMAKE_SOURCE_DIR}/tests/Test_GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Orders.cpp)
+add_executable(tests ${CMAKE_SOURCE_DIR}/src/Map.cpp ${CMAKE_SOURCE_DIR}/src/Orders.cpp ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Cards.cpp ${CMAKE_SOURCE_DIR}/tests/Test_GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Orders.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Map.cpp)
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 
 add_executable(main ${CMAKE_SOURCE_DIR}/src/MainDriver.cpp ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/src/Orders.cpp ${CMAKE_SOURCE_DIR}/src/Player.cpp)
