--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ workflows:
                 - master
                 - devAdrienne
                 - Maps
+                - dev-rosie
 jobs:
   build-and-test:
     docker:
