--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.11)
+
 project(comp354)
+
 set(CMAKE_CXX_STANDARD 20)
 
 Include(FetchContent)
+
 FetchContent_Declare(
         Catch2
         GIT_REPOSITORY https://github.com/catchorg/Catch2.git
@@ -10,10 +13,14 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(tests ${CMAKE_SOURCE_DIR}/src/Map.cpp ${CMAKE_SOURCE_DIR}/src/Player.cpp ${CMAKE_SOURCE_DIR}/src/Orders.cpp ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Cards.cpp ${CMAKE_SOURCE_DIR}/tests/Test_GameEngine.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Orders.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Map.cpp ${CMAKE_SOURCE_DIR}/tests/Test_Player.cpp)
+aux_source_directory(src/core CORE)
+
+aux_source_directory(tests TESTS)
+
+add_executable(tests ${CMAKE_SOURCE_DIR}/${TESTS} ${CMAKE_SOURCE_DIR}/${CORE})
 
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 
-add_executable(main ${CMAKE_SOURCE_DIR}/src/MainDriver.cpp ${CMAKE_SOURCE_DIR}/src/Cards.cpp ${CMAKE_SOURCE_DIR}/src/GameEngine.cpp ${CMAKE_SOURCE_DIR}/src/Orders.cpp ${CMAKE_SOURCE_DIR}/src/Map.cpp ${CMAKE_SOURCE_DIR}/src/Player.cpp)
+add_executable(main ${CMAKE_SOURCE_DIR}/src/driver/MainDriver.cpp ${CMAKE_SOURCE_DIR}/${CORE})
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
